--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
 				<p class="timer-sub" id="timer-sub" title="To end">Timer to end</p>
 			</div>
 			<div class="timer-controls">
-				<button id="start">Start</button>
-				<button id="stop">Stop</button>
-				<button id="pause">Pause</button>
-				<button id="clear">Clear</button>
-				<label>Loop:</label>
-				<input type="checkbox" title="Loop" id="loop">
-				<label>Timer/Time:</label>
-				<input type="checkbox" title="Mode" id="displayMode">
+				<button id="start"></button>
+				<!-- <button id="stop">⏹</button> -->
+				<button id="pause">⏸</button>
+				<button id="clear">❌</button>
+				<!-- <label>Loop:</label>
+				<input type="checkbox" title="Loop" id="loop"> -->
+				<button id="loop">🔁</button>
+				<!-- <label>Timer/Time:</label>
+				<input type="checkbox" title="Mode" id="displayMode"> -->
+				<button id="displayMode">Timer ⏱</button>
 				<button id="editMode">Edit 📝</button>
 			</div>
 			<div class="timer-list sort-vertical" id="timer-list"></div>
