--- a/index.html
+++ b/index.html
@@ -17,17 +17,12 @@
 				<p class="timer-sub" id="timer-sub" title="To end">Timer to end</p>
 			</div>
 			<div class="timer-controls">
-				<button id="start"></button>
-				<!-- <button id="stop">⏹</button> -->
-				<button id="pause">⏸</button>
-				<button id="clear">❌</button>
-				<!-- <label>Loop:</label>
-				<input type="checkbox" title="Loop" id="loop"> -->
-				<button id="loop">🔁</button>
-				<!-- <label>Timer/Time:</label>
-				<input type="checkbox" title="Mode" id="displayMode"> -->
-				<button id="displayMode">Timer ⏱</button>
-				<button id="editMode">Edit 📝</button>
+				<button id="start" title="Start/Stop"></button>
+				<button id="pause" title="Pause"></button>
+				<button id="clear" title="Clear"></button>
+				<button id="loop" title="Loop"></button>
+				<button id="displayMode" title="Display Mode">Timer ⏱</button>
+				<button id="editMode" title="Mode">Edit 📝</button>
 			</div>
 			<div class="timer-list sort-vertical" id="timer-list"></div>
 			<button class="row-add">+</button>
