--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
 			<div class="row-section">
 				<div class="row-handle">⠿</div>
 			</div>
-			<div class="row-section">
-				<div class="row-options row-play">
-					<button class="row-go white-icon" title="Go"></button>
-					<button class="row-ignore" title="Ignore"></button>
-					<input type="text" class="row-label" placeholder="Label" title="Label">
-					<p class="row-timer">00</p>
-				</div>
-				<div class="row-options row-edit">
+			<div class="row-section row-controls">
+				<div class="row-options">
 					<input type="date" class="row-date" title="date">
 					<input type="number" min="0" class="row-hours" placeholder="h" title="Hurs">
 					<input type="number" min="0" class="row-minutes" placeholder="m" title="Minutes">
 					<input type="number" min="0" class="row-seconds" placeholder="s" title="Seconds">
 					<button class="row-mode white-icon" title="Duration/Time mode"></button>
 					<button class="row-remove">x</button>
+				</div>
+				<div class="row-options">
+					<button class="row-go white-icon" title="Go"></button>
+					<button class="row-ignore" title="Ignore"></button>
+					<input type="text" class="row-label" placeholder="Label" title="Label">
+					<p class="row-timer">00</p>
 				</div>
 			</div>
 		</div>
