fix ignore issue

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 			<div class="timer-controls">
 				<button id="play" class="white-icon" title="Start/Stop"></button>
 				<button id="pause" class="white-icon" title="Pause"></button>
-				<button id="clear" title="Clear"></button>
+				<button id="next" class="white-icon" title="Next"></button>
 				<button id="loop" class="white-icon" title="Loop"></button>
 				<button id="displayMode" class="white-icon" title="Display Mode">Timer</button>
 				<button id="editMode" class="white-icon" title="Mode">Edit</button>
+				<button id="clear" title="Clear"></button>
 			</div>
 			<div class="timer-list sort-vertical" id="timer-list"></div>
 			<button class="row-add">+</button>
